overflow-y: scroll for .search-results; fixes issue in Firefox

--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -19,6 +19,10 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+.search-results {
+  overflow-y: scroll;
+}
+
 html {
   line-height: 1;
 }
